force-app/main/default/objects/Elixir_Authorize_Config__mdt/Elixir_Authorize_Config__mdt.object-meta.xml
<CustomObject>
    <label>Elixir Authorize Config</label>
    <pluralLabel>Elixir Authorize Configs</pluralLabel>
</CustomObject>