force-app/main/default/objects/Elixir_Authorize_Config__mdt/fields/Elixir_Cancel_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>Elixir_Cancel_Button_Label__c</fullName>
    <description>Store the Cancel Button Label on Authorize Payment Page</description>
    <label>Elixir Cancel Button Label</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>