force-app/main/default/objects/Elixir_Authorize_Config__mdt/fields/Elixir_Merchant_Name__c.field-meta.xml
<CustomField>
    <fullName>Elixir_Merchant_Name__c</fullName>
    <description>Store the name of Merchant to be Displayed on the Payment Page</description>
    <label>Elixir Merchant Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>